# port-blue-ocean-framework

port-blue-ocean-framework/carg/: .env.example  CHANGELOG.md  CLIENT_ARCHITECTURE_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  MANIFEST.in  PACKAGE_CREATION_SUMMARY.md  PACKAGE_INFO.md  README.md  SETUP_SUMMARY.md  azure-pipelines.yml  azure.yaml  pyproject.toml  requirements-dev.txt  setup.py
port-blue-ocean-framework/carg/.github/workflows/: deploy.yml
port-blue-ocean-framework/carg/.port/: spec.yaml
port-blue-ocean-framework/carg/.port/resources/: blueprints.json  port-app-config.yml
port-blue-ocean-framework/carg/infra/: main.bicep  main.dev.parameters.json  main.prod.parameters.json
port-blue-ocean-framework/carg/port_objects/: all_objects.json  carg_component.json  carg_deployment.json  carg_project.json  carg_service.json
port-blue-ocean-framework/carg/port_ocean_carg/: __init__.py  client.py  extract_port_json.py  extract_port_objects.py  extract_port_simple.py  main.py  test_client_architecture.py  test_integration.py  validate_port_objects.py
port-blue-ocean-framework/carg/scripts/: deploy.sh
port-blue-ocean-framework/carg/templates/: deploy-container-app.yml
